# ppd-rs

./: .mergify.yml  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: flakecheck.yml
.hydra/: jobsets.nix  spec.json
nix/: devshell.nix
src/: args.rs  error.rs  lib.rs  main.rs
