[package]
name = "ppd"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Interact with power-profiles-daemon with Rust"
homepage = "https://github.com/Lyndeno/ppd-rs"
repository = "https://github.com/Lyndeno/ppd-rs"

[dependencies]
zbus = { version = "5.6", default-features = false }
clap = { version = "4.*.*", features = ["derive"] }
thiserror = "2.0"
serde = "1"

[build-dependencies]
clap = { version = "4.*.*", features = ["derive"] }
clap_complete = "4.*.*"
clap_mangen = "0.2.*"

[features]
default = [ "async-io", "blocking-api" ]
async-io = ["zbus/async-io"]
blocking-api = ["zbus/blocking-api"]
tokio = ["zbus/tokio"]
